# Kinko

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  readme.md  setup.sql
files/home/: liip.txt
files/vault/AliceXOXO/: Fo_ZakTJWBWP9GUgVnoVaqWOU4EIdDUoAThk_R8=  passwords.txt.locked
migrations/2021-05-18-080743_create_users/: up.sql
migrations/2021-05-18-080745_create_files/: up.sql
migrations/2021-05-18-131457_seed/: down.sql  up.sql
src/: errors.rs  main.rs
src/client/: client.rs  crypto.rs
src/db/: models.rs  repository.rs  schema.rs
src/server/: authentication.rs  files.rs  server.rs
