[package]
name = "kinko"
version = "0.1.0"
authors = ["Doran Kayoumi <dorankayoumi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.6"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8"
lazy_static = "1.4.0"
strum = "0.20.0"
strum_macros = "0.20"